--- a/p3po/data_generation/label_points.ipynb
+++ b/p3po/data_generation/label_points.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,10 +11,10 @@
     "# If you want to use a specific image set use_video to False and give the image path under path\n",
     "#TODO: Set the path to the video file or image file\n",
     "use_video = True\n",
-    "path = \"\"\n",
+    "path = \"/fs/cfar-projects/waypoint_rl/BAKU/robot_demos/processed_data_no_depth/0908_putmugonplate/demonstration_1/videos/camera1.mp4\"\n",
     "\n",
     "#TODO: Set the task name here -- this will be used to save the output\n",
-    "task_name = \"\"\n",
+    "task_name = \"mugonplate\"\n",
     "\n",
     "img = None\n",
     "if use_video:\n",
