working with metaworld

--- a/p3po/data_generation/label_points.ipynb
+++ b/p3po/data_generation/label_points.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,23 +11,35 @@
     "# If you want to use a specific image set use_video to False and give the image path under path\n",
     "#TODO: Set the path to the video file or image file\n",
     "use_video = True\n",
-    "path = \"/fs/cfar-projects/waypoint_rl/BAKU/robot_demos/processed_data_no_depth/0908_putmugonplate/demonstration_1/videos/camera1.mp4\"\n",
+    "path = \"\"\n",
+    "\n",
+    "#TODO: If you have an open teach pickle you can use that instead of the video/image, set use_pickle to True and set the path/pixel_key\n",
+    "use_pickle = True\n",
+    "pickle_path = \"/fs/cfar-projects/waypoint_rl/BAKU_final/P3PO/expert_demos/metaworld/assembly.pkl\"\n",
+    "pixel_key = \"pixels\"\n",
     "\n",
     "#TODO: Set the task name here -- this will be used to save the output\n",
-    "task_name = \"mugonplate\"\n",
+    "task_name = \"assembly\"\n",
     "\n",
-    "img = None\n",
-    "if use_video:\n",
-    "    cap = cv2.VideoCapture(path)\n",
-    "    while(cap.isOpened()):\n",
-    "        ret, frame = cap.read()\n",
-    "        img = frame.copy()\n",
-    "        break\n",
+    "if use_pickle:\n",
+    "    import pickle\n",
+    "    with open(pickle_path, 'rb') as f:\n",
+    "        data = pickle.load(f)\n",
+    "    img = data['observations'][0][pixel_key][0]\n",
+    "    use_video = False\n",
     "else:\n",
-    "    img = cv2.imread(path)\n",
+    "    img = None\n",
+    "    if use_video:\n",
+    "        cap = cv2.VideoCapture(path)\n",
+    "        while(cap.isOpened()):\n",
+    "            ret, frame = cap.read()\n",
+    "            img = frame.copy()\n",
+    "            break\n",
+    "    else:\n",
+    "        img = cv2.imread(path)\n",
     "\n",
-    "# We flip here because CV2 reads in as BGR\n",
-    "img = img[:,:,::-1]\n",
+    "    # We flip here because CV2 reads in as BGR\n",
+    "    img = img[:,:,::-1]\n",
     "\n",
     "#TODO: If its hard to see the image, you can increase the size_multiplier, this won't affect the selected coordinates\n",
     "size_multiplier = 1\n",
@@ -37,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +118,7 @@
     "                self.canvas.fill_style = 'red'\n",
     "                for coord in self.coords:\n",
     "                    x, y = coord[1] // self.size_multiplier, coord[2] // self.size_multiplier\n",
-    "                    self.canvas.fill_circle(x, y, 5)\n",
+    "                    self.canvas.fill_circle(x, y, 2)\n",
     "\n",
     "        # Connect the click event to the handler\n",
     "        self.canvas.on_mouse_down(on_click)\n",
