--- a/p3po/data_generation/label_points.ipynb
+++ b/p3po/data_generation/label_points.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,11 +15,11 @@
     "\n",
     "#TODO: If you have an open teach pickle you can use that instead of the video/image, set use_pickle to True and set the path/pixel_key\n",
     "use_pickle = True\n",
-    "pickle_path = \"/fs/cfar-projects/waypoint_rl/BAKU_final/P3PO/expert_demos/metaworld/assembly.pkl\"\n",
+    "pickle_path = \"/fs/cfar-projects/waypoint_rl/BAKU_final/P3PO/expert_demos/metaworld/basketball.pkl\"\n",
     "pixel_key = \"pixels\"\n",
     "\n",
     "#TODO: Set the task name here -- this will be used to save the output\n",
-    "task_name = \"assembly\"\n",
+    "task_name = \"basketball\"\n",
     "\n",
     "if use_pickle:\n",
     "    import pickle\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
