eval file update

--- a/p3po/data_generation/label_points.ipynb
+++ b/p3po/data_generation/label_points.ipynb
@@ -11,15 +11,15 @@
     "# If you want to use a specific image set use_video to False and give the image path under path\n",
     "#TODO: Set the path to the video file or image file\n",
     "use_video = True\n",
-    "path = \"\"\n",
+    "path = \"path/to/video\"\n",
     "\n",
     "#TODO: If you have an open teach pickle you can use that instead of the video/image, set use_pickle to True and set the path/pixel_key\n",
-    "use_pickle = True\n",
-    "pickle_path = \"/fs/cfar-projects/waypoint_rl/BAKU_final/P3PO/expert_demos/metaworld/assembly.pkl\"\n",
+    "use_pickle = False\n",
+    "pickle_path = \"path/to/pickle\"\n",
     "pixel_key = \"pixels\"\n",
     "\n",
     "#TODO: Set the task name here -- this will be used to save the output\n",
-    "task_name = \"assembly\"\n",
+    "task_name = \"TASK_NAME\"\n",
     "\n",
     "if use_pickle:\n",
     "    import pickle\n",
