--- a/p3po/data_generation/label_points.ipynb
+++ b/p3po/data_generation/label_points.ipynb
@@ -133,13 +133,13 @@
     "\n",
     "    def on_done(self):\n",
     "        logging.info(\"saving\")\n",
-    "        Path(self.coordinates_path + "/coords/").mkdir(parents=True, exist_ok=True)
+    "        Path(self.coordinates_path + "/coords/").mkdir(parents=True, exist_ok=True)\n",
     "        with open(self.coordinates_path + \"/coords/\" + self.env_name + \".pkl\", 'wb') as f:\n",
     "            try:\n",
     "                pickle.dump(self.coords, f)\n",
     "            except Exception as e:\n",
     "                logging.info(e)\n",
-    "        Path(self.coordinates_path + "/images/").mkdir(parents=True, exist_ok=True)
+    "        Path(self.coordinates_path + "/images/").mkdir(parents=True, exist_ok=True)\n",
     "        with open(self.coordinates_path + \"/images/\" + self.env_name + \".png\", 'wb') as f:\n",
     "            try:\n",
     "                image = Image.fromarray(self.img)\n",
