--- a/p3po/data_generation/label_points.ipynb
+++ b/p3po/data_generation/label_points.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import cv2\n",
+    "from pathlib import Path\n",
     "# If you want to read a video file set the path under path, \n",
     "# If you want to use a specific image set use_video to False and give the image path under path\n",
     "#TODO: Set the path to the video file or image file\n",
@@ -133,11 +134,13 @@
     "\n",
     "    def on_done(self):\n",
     "        logging.info(\"saving\")\n",
+    "        Path(self.coordinates_path + \"/coords/\").mkdir(parents=True, exist_ok=True)\n",
     "        with open(self.coordinates_path + \"/coords/\" + self.env_name + \".pkl\", 'wb') as f:\n",
     "            try:\n",
     "                pickle.dump(self.coords, f)\n",
     "            except Exception as e:\n",
     "                logging.info(e)\n",
+    "        Path(self.coordinates_path + \"/images/\").mkdir(parents=True, exist_ok=True)\n",
     "        with open(self.coordinates_path + \"/images/\" + self.env_name + \".png\", 'wb') as f:\n",
     "            try:\n",
     "                image = Image.fromarray(self.img)\n",
