--- a/p3po/data_generation/label_points.ipynb
+++ b/p3po/data_generation/label_points.ipynb
@@ -14,10 +14,12 @@
     "use_video = True\n",
     "path = \"path/to/video\"\n",
     "\n",
-    "#TODO: If you have an open teach pickle you can use that instead of the video/image, set use_pickle to True and set the path/pixel_key\n",
+    "# TODO: If you have an open teach pickle you can use that instead of the video/image, set use_pickle to True and set the path/pixel_key\n",
+    "# If the image that shows at the bottom is bgr set original_bgr to True\n",
     "use_pickle = False\n",
     "pickle_path = \"path/to/pickle\"\n",
     "pixel_key = \"pixels\"\n",
+    "original_bgr = False\n",
     "\n",
     "#TODO: Set the task name here -- this will be used to save the output\n",
     "task_name = \"TASK_NAME\"\n",
@@ -28,6 +30,8 @@
     "        data = pickle.load(f)\n",
     "    img = data['observations'][0][pixel_key][0]\n",
     "    use_video = False\n",
+    "    if original_bgr:\n",
+    "        img = img[:,:,::-1]\n",
     "else:\n",
     "    img = None\n",
     "    if use_video:\n",
