--- a/p3po/data_generation/test_run.ipynb
+++ b/p3po/data_generation/test_run.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.5899, -0.0945,  1.1914, -0.5287, -0.1156,  1.1426, -0.5766, -0.0475,\n",
-      "         1.2037, -0.6642, -0.2458,  1.1434, -0.5914, -0.2377,  1.1038, -0.6297,\n",
-      "        -0.2119,  1.1317,  1.1378,  0.6783,  1.4016,  0.7904,  1.4152,  1.5150,\n",
-      "         1.5758,  1.1937,  1.6473,  0.0092, -1.0650,  1.9896,  0.0272, -1.3166,\n",
-      "         2.1537,  0.0704, -1.3282,  1.9332,  0.1197, -1.5923,  2.1006,  0.1524,\n",
-      "        -1.3685,  1.6979,  0.2421, -1.7166,  1.9940,  0.2884, -1.5943,  1.7750,\n",
-      "         0.3710, -1.6531,  1.7644,  0.0660, -0.9679,  1.7747,  0.1004, -1.0887,\n",
-      "         1.7691,  0.1219, -1.1953,  1.7558,  0.1761, -1.2873,  1.7391,  0.2030,\n",
-      "        -1.3384,  1.7201,  0.2615, -1.4144,  1.6876,  0.3194, -1.4475,  1.6722,\n",
-      "         0.3621, -1.4893,  1.6488])\n"
+      "(360, 448, 3)\n"
      ]
     }
    ],
@@ -29,8 +20,8 @@
     "\n",
     "use_pickle = True\n",
     "# pickle_path = \"/home/aadhithya/bobby_wks/P3PO/processed_data/points/microwave.pkl\"\n",
-    "pickle_path = \"/home/aadhithya/bobby_wks/P3PO/processed_data/points/pick_plate_from_rack.pkl\"\n",
-    "pixel_key = \"pixels2\"\n",
+    "pickle_path =\"/home/aadhithya/bobby_wks/P3PO/processed_data_pkl/0902_pickmug.pkl\"\n",
+    "pixel_key = \"pixels1\"\n",
     "\n",
     "#TODO: Set the task name here -- this will be used to save the output\n",
     "task_name = \"assembly\"\n",
@@ -40,8 +31,9 @@
     "    with open(pickle_path, 'rb') as f:\n",
     "        data = pickle.load(f)\n",
     "\n",
-    "    print(data[\"episode_list\"][0][0])\n",
-    "    # img1 = data['observations'][0][pixel_key][0]\n",
+    "    # print(data[\"observations\"][0][0])\n",
+    "    img1 = data['observations'][0][pixel_key][0]\n",
+    "    print(img1.shape)\n",
     "    # img2 = data['observations'][0][pixel_key][1]\n",
     "    # img3 = data['observations'][0][pixel_key][2]\n",
     "    # img4 = data['observations'][0][pixel_key][3]\n",
