--- a/p3po/data_generation/test_run.ipynb
+++ b/p3po/data_generation/test_run.ipynb
@@ -2,14 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(360, 448, 3)\n"
+      "[(0, 243.9041095890411, 203.01492267341956), (0, 282.73972602739724, 179.1791625214796), (0, 247.8082191780822, 235.06991046395947), (0, 290.958904109589, 211.64511169394953), (0, 266.71232876712327, 211.85059238491453), (0, 250.27397260273972, 276.1660486569594), (0, 289.52054794520546, 248.83711675861446)]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 24\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(data)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# print(len(data['episode_list'][0]))\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# print(data[\"observations\"][0][0])\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m dem \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mobservations\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m][pixel_key]\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(dem\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m(data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax_cartesian\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
      ]
     }
    ],
@@ -20,8 +31,10 @@
     "\n",
     "use_pickle = True\n",
     "# pickle_path = \"/home/aadhithya/bobby_wks/P3PO/processed_data/points/microwave.pkl\"\n",
-    "pickle_path =\"/home/aadhithya/bobby_wks/P3PO/processed_data_pkl/0902_pickmug.pkl\"\n",
-    "pixel_key = \"pixels1\"\n",
+    "# pickle_path =\"/home/aadhithya/bobby_wks/P3PO/processed_data/points/1218_pick_bottle_from_fridge.pkl\"\n",
+    "# pickle_path = \"/home/aadhithya/bobby_wks/P3PO/processed_data/points/1220_pick_up_bottle.pkl\"\n",
+    "pickle_path = \"/home/aadhithya/bobby_wks/P3PO/coordinates/coords/cam4_robot_place_bottle_8p.pkl\"\n",
+    "pixel_key = \"pixels4\"\n",
     "\n",
     "#TODO: Set the task name here -- this will be used to save the output\n",
     "task_name = \"assembly\"\n",
@@ -31,9 +44,95 @@
     "    with open(pickle_path, 'rb') as f:\n",
     "        data = pickle.load(f)\n",
     "\n",
+    "    print(data)\n",
+    "    # print(len(data['episode_list'][0]))\n",
+    "\n",
     "    # print(data[\"observations\"][0][0])\n",
-    "    img1 = data['observations'][0][pixel_key][0]\n",
-    "    print(img1.shape)\n",
+    "    dem = data['observations'][0][pixel_key]\n",
+    "    print(dem.shape)\n",
+    "    print(data['max_cartesian'])\n",
+    "    print(data['min_cartesian'])\n",
+    "    print(data['max_gripper'])\n",
+    "    print(data['min_gripper'])\n",
+    "    print(data['max_sensor'])\n",
+    "    print(data['min_sensor'])\n",
+    "    # print(img1.shape)\n",
+    "    # img2 = data['observations'][0][pixel_key][1]\n",
+    "    # img3 = data['observations'][0][pixel_key][2]\n",
+    "    # img4 = data['observations'][0][pixel_key][3]\n",
+    "    # img5 = data['observations'][0][pixel_key][60]\n",
+    "    # plt.imshow(img1)\n",
+    "    # plt.show()\n",
+    "    # plt.imshow(img2)\n",
+    "    # plt.show()\n",
+    "    # plt.imshow(img3)\n",
+    "    # plt.show()\n",
+    "    # plt.imshow(img4)\n",
+    "    # plt.show()\n",
+    "    # plt.imshow(img5)\n",
+    "    # plt.show()\n",
+    "\n",
+    "    # use_video = False\n",
+    "    # check data keys\n",
+    "    # print(data.keys())\n",
+    "    # print(data['episode_list'][0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['observations', 'max_cartesian', 'min_cartesian', 'max_gripper', 'min_gripper', 'max_sensor', 'min_sensor'])\n",
+      "(247, 360, 360, 3)\n",
+      "[3.3824637e+02 1.9113258e+02 4.8120712e+02 3.1409099e+00 4.1035000e-02\n",
+      " 4.8312999e-02]\n",
+      "[202.65956  -80.48707  358.87817   -3.141357  -1.544027  -0.891604]\n",
+      "1.0\n",
+      "0.0\n",
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "use_pickle = True\n",
+    "# pickle_path = \"/home/aadhithya/bobby_wks/P3PO/processed_data/points/microwave.pkl\"\n",
+    "# pickle_path =\"/home/aadhithya/bobby_wks/P3PO/processed_data/points/1218_pick_bottle_from_fridge.pkl\"\n",
+    "# pickle_path = \"/home/aadhithya/bobby_wks/P3PO/processed_data/points/1220_pick_up_bottle.pkl\"\n",
+    "pickle_path = \"/home/aadhithya/bobby_wks/P3PO/expert_demos/xarm_env/1220_pick_bottle_from_fridge_compare.pkl\"\n",
+    "pixel_key = \"pixels4\"\n",
+    "\n",
+    "#TODO: Set the task name here -- this will be used to save the output\n",
+    "task_name = \"assembly\"\n",
+    "\n",
+    "if use_pickle:\n",
+    "    import pickle\n",
+    "    with open(pickle_path, 'rb') as f:\n",
+    "        data = pickle.load(f)\n",
+    "\n",
+    "    print(data.keys()) # 'max_cartesian', 'min_cartesian', 'max_gripper', 'min_gripper', 'max_sensor', 'min_sensor']\n",
+    "    # print(len(data['episode_list'][0]))\n",
+    "\n",
+    "    # print(data[\"observations\"][0][0])\n",
+    "    dem = data['observations'][0][pixel_key]\n",
+    "    print(dem.shape)\n",
+    "    print(data['max_cartesian'])\n",
+    "    print(data['min_cartesian'])\n",
+    "    print(data['max_gripper'])\n",
+    "    print(data['min_gripper'])\n",
+    "    print(data['max_sensor'])\n",
+    "    print(data['min_sensor'])\n",
+    "    \n",
+    "    # print(img1.shape)\n",
     "    # img2 = data['observations'][0][pixel_key][1]\n",
     "    # img3 = data['observations'][0][pixel_key][2]\n",
     "    # img4 = data['observations'][0][pixel_key][3]\n",
